<?xml version="1.0" encoding="UTF-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraint"
    style="@style/button_accent"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="0dp"
        android:layout_height="128dp"
        android:background="@drawable/rounded_corner_bottom"
        android:backgroundTint="@color/primary_main"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </RelativeLayout>

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/imageEllipse13"
        android:layout_width="192dp"
        android:layout_height="192dp"
        android:layout_marginTop="16dp"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:shapeAppearanceOverlay="@style/circle"
        app:srcCompat="@android:drawable/btn_default_small" />

    <ImageButton
        android:id="@+id/editImageBtn"
        style="@style/button_accent"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:background="@drawable/rounded_corner_full"
        android:src="@drawable/ic_outline_photo_camera_24"
        app:layout_constraintBottom_toBottomOf="@+id/imageEllipse13"
        app:layout_constraintEnd_toEndOf="@+id/imageEllipse13"
        app:layout_constraintStart_toEndOf="@+id/imageEllipse13"
        tools:ignore="SpeakableTextPresentCheck" />

    <LinearLayout

        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/guideline3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageEllipse13">

        <TextView
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/roboto_medium"
            android:paddingStart="32dp"
            android:paddingEnd="32dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="@color/primary_light"
            android:text="Nome" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText

                android:id="@+id/name_field"
                style="@style/body_main_color"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:paddingStart="32dp"
                android:paddingEnd="32dp"
                android:text="@string/lbl_simona_marino" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/nickname"
            style="@style/title_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:ellipsize="end"
            android:paddingStart="32dp"
            android:paddingEnd="32dp"
            android:singleLine="true"
            android:text="@string/lbl_nickname" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/nickname_field"
                style="@style/body_main_color"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:gravity="start"
                android:paddingStart="32dp"
                android:paddingEnd="32dp"
                android:text="@string/lbl_simonetta98" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/bio"
            style="@style/title_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:ellipsize="end"
            android:paddingStart="32dp"
            android:paddingEnd="32dp"
            android:singleLine="true"
            android:text="@string/lbl_bio" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/bio_field"
                style="@style/body_main_color"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:gravity="start"
                android:paddingStart="32dp"
                android:paddingEnd="32dp"
                android:text="@string/msg_ciao_sono_simon" />
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".85" />

</androidx.constraintlayout.widget.ConstraintLayout>



